# percept_os

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cicd_pipeline.yaml
data/: data.yaml  dataset.yaml
jobs/: aerial_demo.json  edge_demo.json
percept_os/: run.py
percept_os/core/: logger.py  utils.py
percept_os/pipelines/: aerial.py  realtime.py
