[project]
name = "percept_os"
description = "PerceptOS — Multi-Workload Vision Runtime for Edge Robotics and Aerial Imagery"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.9",
    "rich>=13.0",
    "ultralytics>=8.3.0",
    "sahi>=0.11.0",
    "supervision>=0.25.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "psutil>=6.0",
    "onnxruntime>=1.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["percept_os*"]

